# UNN-codons

./: MANIFEST.in  README.md  setup.cfg
unn_codons/: find_consecutive_unn_codons.py  find_unn_codons.py
unn_codons/data/genbank/: CP000244.1.gbk
unn_codons/gbk/: parse_gbk.py
unn_codons/protein/: codon_counts.py  consecutive_counts.py  unn_calculations.py
unn_codons/struct/: codon_counts.py  consecutive_counts.py  gbk.py  unn_calculations.py
unn_codons/tbl/: consecutives_table.py  table.py
