[metadata]
name = UNN-codons
version = v1.0.0
description = Find UNN codons in a genome

author = Colin Russell
author_email = c-russell@live.com

[options]
include_package_data = True
install_requires =
    biopython==1.79
    numpy==1.21.1
    pandas==1.3.0
    schema==0.7.4
packages = 
    unn_codons
    unn_codons.gbk
    unn_codons.protein
    unn_codons.struct
python_requires = ~= 3.7

[options.entry_points]
console_scripts =
    unn = unn_codons.find_unn_codons:main
    consec = unn_codons.find_consecutive_unn_codons:main